syntax = "proto3";

package movie;

option go_package = "/grpc";

service MovieService {
    rpc GetMovie(GetMovieRequest) returns (GetMovieResponse);
    rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse);
    rpc UpdateMovie(UpdateMovieRequest) returns (UpdateMovieResponse);
    rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse);
}

message GetMovieRequest {
    uint32 movie_id = 1;
}

message GetMovieResponse {
    uint32 movie_id = 1;
    string title = 2;
    string director = 3;
    double rating = 4;
}

message CreateMovieRequest {
    string title = 1;
    string director = 2;
    double rating = 3;

}

message CreateMovieResponse {
    uint32 movie_id = 1;
    string title = 2;
    string director = 3;
    double rating = 4;

}

message UpdateMovieRequest {
    uint32 movie_id = 1;
    string title = 2;
    string director = 3;
    double rating = 4;

}

message UpdateMovieResponse {
    uint32 movie_id = 1;
    string title = 2;
    string director = 3;
    double rating = 4;

}

message DeleteMovieRequest {
    uint32 movie_id = 1;
}

message DeleteMovieResponse {
    string message = 1;
}